--- a/speechQuality/QualityNetPOLQA/load_polqa.ipynb
+++ b/speechQuality/QualityNetPOLQA/load_polqa.ipynb
@@ -11,12 +11,12 @@
     },
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -28,14 +28,14 @@
      "start_time": "2024-05-14T08:38:47.757171Z"
     }
    },
+   "outputs": [],
    "source": [
     "nearend_excel = r\"D:\\work\\speechEnhancement\\speechQuality\\PQLQA结果.xlsx\"\n",
     "mic_excel = r\"D:\\work\\speechEnhancement\\speechQuality\\PQLQA结果_mic.xlsx\"\n",
     "\n",
     "nearend = pd.read_excel(nearend_excel)\n",
     "mic = pd.read_excel(mic_excel)\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -47,13 +47,13 @@
      "start_time": "2024-05-14T08:39:07.945023Z"
     }
    },
+   "outputs": [],
    "source": [
     "nearend_Filename = nearend.iloc[:,0]\n",
     "nearend_moslqo = nearend.iloc[:,2]\n",
     "mic_Filename = mic.iloc[:,0]\n",
     "mic_moslqo = mic.iloc[:,2]"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -65,6 +65,7 @@
      "start_time": "2024-05-07T04:23:08.495494Z"
     }
    },
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for i in range(len(nearend_Filename)):\n",
@@ -84,14 +85,14 @@
     "        if polqa > 5:\n",
     "            polqa = polqa / 10000\n",
     "        f.write(full_filename + \",\" + format(polqa, \".2f\") + \"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "8221c69974f250cf",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for it in nearend_Filename:\n",
@@ -103,8 +104,7 @@
     "        noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it)\n",
     "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", it.split(\"_\")[0]+\"_target.wav\")\n",
     "        f.write(noise_wav + \",\" + clean_wav + \"\\n\")\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -116,6 +116,7 @@
      "start_time": "2024-05-14T08:56:10.612413Z"
     }
    },
+   "outputs": [],
    "source": [
     "total_wav = []\n",
     "total_mos = []\n",
@@ -149,8 +150,7 @@
     "#         noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav)\n",
     "#         clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"_\")[0]+\"_target.wav\")\n",
     "#         f.write(noise_wav + \",\" + clean_wav + \"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -162,6 +162,7 @@
      "start_time": "2024-05-14T08:49:01.132613Z"
     }
    },
+   "outputs": [],
    "source": [
     "length = 90000\n",
     "import random\n",
@@ -190,11 +191,11 @@
     "        noise_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav)\n",
     "        f.write(noise_wav + \",\" + format(mos, \".2f\") + \"\\n\")\n",
     "        # f.write(noise_wav + \",\" + clean_wav + \"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "6518aa7a74f5d0d0",
    "metadata": {
     "ExecuteTime": {
@@ -202,6 +203,7 @@
      "start_time": "2024-05-22T02:05:57.851793Z"
     }
    },
+   "outputs": [],
    "source": [
     "with open(\"wav_train_se.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    files = f.read().splitlines()\n",
@@ -210,28 +212,27 @@
     "with open(\"wav_train_mid_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for file in files[:20000]:\n",
     "        f.write(file + \"\\n\")\n"
-   ],
-   "execution_count": 1,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "46767767857e8ff0",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import random\n",
     "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    files = f.read().splitlines()\n",
     "random.shuffle(files)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "id": "305401d8",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "with open(\"wav_polqa_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
@@ -239,14 +240,14 @@
     "        wav, score = file.split(\",\")\n",
     "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"\\\\\")[-1].split(\"_\")[0]+\"_target.wav\")\n",
     "        f.write(wav+\",\"+clean_wav+\",\"+score+\"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "89de8b32",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "with open(\"wav_polqa_se_mini.list\", \"w\", encoding=\"utf-8\") as f:\n",
@@ -254,14 +255,14 @@
     "        wav, score = file.split(\",\")\n",
     "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"\\\\\")[-1].split(\"_\")[0]+\"_target.wav\")\n",
     "        f.write(wav+\",\"+clean_wav+\",\"+score+\"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "id": "47c88cfb",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "with open(\"wav_polqa_se_mid.list\", \"w\", encoding=\"utf-8\") as f:\n",
@@ -269,17 +270,19 @@
     "        wav, score = file.split(\",\")\n",
     "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"\\\\\")[-1].split(\"_\")[0]+\"_target.wav\")\n",
     "        f.write(wav+\",\"+clean_wav+\",\"+score+\"\\n\")"
-   ],
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d9ce8eb8f21bf7b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T04:17:25.660834Z",
      "start_time": "2024-05-29T04:17:25.578834Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "with open(\"wav_train_qn.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    files = f.read().splitlines()\n",
@@ -291,19 +294,19 @@
     "for file in files:\n",
     "    scores.append(float(file.split(\",\")[-1]))\n",
     "scores = np.array(scores)"
-   ],
-   "id": "d9ce8eb8f21bf7b5",
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d226d867c177a1f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T04:32:30.172657Z",
      "start_time": "2024-05-29T04:32:30.150658Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "begin = 1.0 - 1e-9\n",
     "step = 0.5\n",
@@ -311,21 +314,29 @@
     "while begin < 5.0 - 1e-9:\n",
     "    scores_range.append(np.argwhere((scores > begin) & (scores < begin + step)))\n",
     "    begin += step"
-   ],
-   "id": "d226d867c177a1f5",
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "685fe35769997eb6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T04:40:39.375089Z",
      "start_time": "2024-05-29T04:40:39.343090Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20976\n"
+     ]
+    }
+   ],
    "source": [
-    "sample_num = 6000\n",
+    "sample_num = 3000\n",
     "import random\n",
     "samples = []\n",
     "for i in range(len(scores_range)):\n",
@@ -336,44 +347,33 @@
     "        samples.extend(random.sample(srange, sample_num))\n",
     "\n",
     "print(len(samples))"
-   ],
-   "id": "685fe35769997eb6",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36860\n"
-     ]
-    }
-   ],
-   "execution_count": 8
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "512e01afa3f42706",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T04:43:37.737204Z",
      "start_time": "2024-05-29T04:43:37.689208Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "random.shuffle(samples)\n",
-    "with open(\"wav_train_qn_rs.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"wav_train_qn_rs2.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for i in samples:\n",
     "        f.write(files[i] + \"\\n\")"
-   ],
-   "id": "512e01afa3f42706",
-   "outputs": [],
-   "execution_count": 11
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "85bcbd42b5427361"
+   "id": "85bcbd42b5427361",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
