--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -364,12 +364,87 @@
    "outputs": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bf7cbb717b241480",
+   "metadata": {},
+   "source": [
+    "from utils import save_graph\n",
+    "from models import CnnMAttn\n",
+    "import torch\n",
+    "dummy_input = torch.rand([1, 512, 257])\n",
+    "model = CnnMAttn()\n",
+    "save_graph(model, dummy_input, \"runs/temp\")"
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c004df1e",
+   "metadata": {},
+   "source": [
+    "import torch\n",
+    "import torchsummary\n",
+    "import torchinfo\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "from models import CnnMAttn\n",
+    "model = CnnMAttn()\n",
+    "writer = SummaryWriter(\"runs/temp\")\n",
+    "\n",
+    "# text = \"\"\"\n",
+    "# 123\n",
+    "# 456\n",
+    "# \"\"\"\n",
+    "# writer.add_text(\"model info\", text)\n",
+    "# print(torchinfo.summary(model, input_size=(4, 512, 257)))\n",
+    "\n",
+    "# a = torchinfo.summary(model, input_size=(4, 512, 257))\n",
+    "# print(a)\n",
+    "\n",
+    "import os\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "\n",
+    "summary = torchinfo.summary(model, col_names=(\"output_size\", \"num_params\", \"kernel_size\"), row_settings=(\"depth\",\"ascii_only\"), input_size=(4, 512, 257))\n",
+    "text = str(summary)\n",
+    "width = summary.formatting.col_width * len(summary.formatting.col_names) * 16\n",
+    "height = len(summary.summary_list) * 24 + 100\n",
+    "im = Image.new(\"RGB\", (width, height), (255, 255, 255))\n",
+    "dr = ImageDraw.Draw(im)\n",
+    "font = ImageFont.truetype(os.path.join(\"C:/Windows/fonts\", \"consola.ttf\"), 16)\n",
+    "\n",
+    "dr.text((10, 5), text, font=font,  fill=\"#000000\")\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig = plt.figure(figsize=(width/200, height/200), dpi=300)\n",
+    "plt.imshow(im)\n",
+    "writer.add_figure(\"model1\", fig)\n"
+   ],
+   "outputs": []
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from models import HASANet\n",
+    "import torch\n",
+    "\n",
+    "model = torch.load(\"models/hasa_cp20240527_001840/final.pt\")"
+   ],
+   "id": "271c5b447fad08f2",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "bf7cbb717b241480"
+   "id": "cb65cc7a76a1cdf0"
   }
  ],
  "metadata": {
