--- a/speechQuality/QualityNetPOLQA/load_polqa.ipynb
+++ b/speechQuality/QualityNetPOLQA/load_polqa.ipynb
@@ -369,11 +369,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "85bcbd42b5427361",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41820\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_wav = []\n",
+    "total_mos = []\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    files = f.read().splitlines()\n",
+    "\n",
+    "for file in files:\n",
+    "    a, b = file.split(\",\")\n",
+    "    total_wav.append(a)\n",
+    "    total_mos.append(float(b))\n",
+    "total_mos = np.array(total_mos)\n",
+    "begin = 1.0 - 1e-9\n",
+    "step = 0.5\n",
+    "scores_range = []\n",
+    "while begin < 5.0 - 1e-9:\n",
+    "    scores_range.append(np.argwhere((total_mos > begin) & (total_mos < begin + step)))\n",
+    "    begin += step\n",
+    "\n",
+    "sample_num = 6000\n",
+    "import random\n",
+    "samples = []\n",
+    "for i in range(len(scores_range)):\n",
+    "    srange = list(scores_range[i].squeeze(-1))\n",
+    "    if len(srange) < sample_num:\n",
+    "        samples.extend(srange)\n",
+    "    else:\n",
+    "        samples.extend(random.sample(srange, sample_num))\n",
+    "\n",
+    "print(len(samples))\n",
+    "random.shuffle(samples)\n",
+    "with open(\"wav_train_qn_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for i in samples:\n",
+    "        t_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\" , total_wav[i].split(\"\\\\\")[-1].split(\"_\")[0]+\"_target.wav\")\n",
+    "        f.write(total_wav[i] + \",\" + t_wav + \",\" + str(total_mos[i]) + \"\\n\")"
+   ]
   }
  ],
  "metadata": {
