--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -7,17 +7,18 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import torch\n",
     "data = torch.randn([1, 25088])"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5c3c884d0072eb08",
    "metadata": {},
+   "outputs": [],
    "source": [
     "x1 = torch.concat([data, torch.zeros([1, 512])], dim=1)\n",
     "x2 = data\n",
@@ -27,34 +28,34 @@
     "y_ = torch.stft(torch.concat([x2[:, 24832:], torch.zeros([1, 256])], dim=1), 512, hop_length=256, return_complex=True, center=False)\n",
     "y2 = torch.concat([y2[:,:, :-1], y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)\n",
     "# y2 = torch.concat([y2, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c08a4fefcab4c9fd",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(torch.sum(torch.abs(torch.abs(y1[:,:, 99]) - torch.abs(y2[:,:, 99]))))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2cbf6bdb10170a07",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fcb83b2f6e640d00",
    "metadata": {},
+   "outputs": [],
    "source": [
     "x1 = torch.concat([data, torch.zeros([1, 512])], dim=1)\n",
     "x2 = data\n",
@@ -64,14 +65,14 @@
     "y_ = torch.stft(torch.concat([x2[:, 24832:], torch.zeros([1, 256])], dim=1), 512, hop_length=256, return_complex=True, center=False)\n",
     "y2 = torch.concat([y2, y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]-1])], dim=2)\n",
     "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "537a11ccfec2ea31",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import time\n",
     "from progressbar import ProgressBar, Percentage, Bar, Timer, ETA\n",
@@ -81,14 +82,14 @@
     "progress = ProgressBar(widgets=widgets).start()\n",
     "for i in progress(range(100)):\n",
     "    time.sleep(0.04)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5a4b6c7d71f8275b",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    li = f.read().splitlines()\n",
@@ -100,14 +101,14 @@
     "with open(\"wav_polqa_big.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for l in li_:\n",
     "        f.write(l+\"\\n\")\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc81537b1e2d416d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from trainer_utils import EarlyStopping, Args\n",
     "import time\n",
@@ -125,27 +126,27 @@
     "    if early_stopping(x):\n",
     "        print(\"Early stopping\")\n",
     "        break"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f85d943530a5ff1",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    li = f.read().splitlines()\n",
     "\n",
     "polqa = [float(l.split(\",\")[1]) for l in li]\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e6668c165426048",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
@@ -161,27 +162,27 @@
     "plt.title(\"MOS分数分布\")\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"images/MOS分数分布图.png\", dpi=dpi)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "75cd5a2d9e3c88d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    li = f.read().splitlines()\n",
     "\n",
     "polqa = [float(l.split(\",\")[1]) for l in li]"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8cd2b0dd145c12ae",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "step = 20\n",
@@ -190,25 +191,25 @@
     "    idx = (int(p * 100) - 100) // step\n",
     "    dis_num[idx] += 1\n",
     "print(dis_num)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7f5d54615216cc0f",
    "metadata": {},
+   "outputs": [],
    "source": [
     "dis_prop = max(dis_num) / dis_num\n",
     "np.sqrt(dis_prop)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9b14681c99d80cce",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from trainer_utils import plot_metric\n",
     "import numpy as np\n",
@@ -216,27 +217,27 @@
     "data = np.load(path, allow_pickle=True).item()\n",
     "plot_metric({\"train_loss\": data['train_loss'], \"valid_loss\": data[\"valid_loss\"]},\n",
     "                                  title=\"train and valid loss\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8304a2aa829097b7",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
     "model = torch.load(r\"D:\\work\\speechEnhancement\\speechQuality\\QualityNetPOLQA\\models\\dpcrn_qsehasa20240518_134721\\best.pt\")\n",
     "model.eval()\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8ae5bdaa00eddbc3",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from utils import seed_everything\n",
     "import torch\n",
@@ -244,25 +245,25 @@
     "import numpy as np\n",
     "\n",
     "seed_everything(42)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e947fa7290ab4819",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(torch.randn((4, 8)))\n",
     "print(np.random.rand(4, 8))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "eac5ba5832b92314",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -277,14 +278,14 @@
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.x)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4be447302c404c6a",
    "metadata": {},
+   "outputs": [],
    "source": [
     "d = dataset(x=x)\n",
     "l = DataLoader(d, batch_size=4, shuffle=False)\n",
@@ -307,8 +308,7 @@
     "    for j in l:\n",
     "        print(j)\n",
     "        break"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -319,6 +319,7 @@
      "is_executing": true
     }
    },
+   "outputs": [],
    "source": [
     "from utils import get_logging\n",
     "\n",
@@ -326,14 +327,14 @@
     "logging.info(\"hello\")\n",
     "logging.info(\"hello\")\n",
     "logging.info(\"hello\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "733c34b676a37dea",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from torch.utils.tensorboard import SummaryWriter\n",
     "import torch\n",
@@ -345,14 +346,14 @@
     "model = dpcrn()\n",
     "\n",
     "summary.add_graph(model, x)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "bf7cbb717b241480",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from utils import save_graph\n",
     "from models import CnnMAttn\n",
@@ -360,14 +361,14 @@
     "dummy_input = torch.rand([1, 512, 257])\n",
     "model = CnnMAttn()\n",
     "save_graph(model, dummy_input, \"runs/temp\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c004df1e",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torchsummary\n",
@@ -403,8 +404,7 @@
     "fig = plt.figure(figsize=(width/200, height/200), dpi=300)\n",
     "plt.imshow(im)\n",
     "writer.add_figure(\"model1\", fig)\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -415,19 +415,20 @@
      "is_executing": true
     }
    },
+   "outputs": [],
    "source": [
     "from models import HASANet\n",
     "import torch\n",
     "\n",
     "model = torch.load(\"models/hasa_cp20240527_001840/final.pt\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "id": "cb65cc7a76a1cdf0",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch.utils.data import dataloader\n",
@@ -438,14 +439,14 @@
     "train_dataset, valid_dataset, test_dataset = load_dataset_se(\"wav_train_se.list\", (0.8, 0.1, 0.1), 512, 256, 2)\n",
     "train_loader = dataloader.DataLoader(dataset=train_dataset, batch_size=8)\n",
     "train_iter = iter(train_loader)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "id": "d9b4bf5b",
    "metadata": {},
+   "outputs": [],
    "source": [
     "x, _, y, _ = next(train_iter)\n",
     "print(torch.mean(torch.abs(torch.abs(x) - torch.abs(y))))\n",
@@ -453,14 +454,14 @@
     "model_qn = model_qn.to(\"cpu\")\n",
     "y_pred = model(x).cpu()\n",
     "print(torch.mean(torch.abs(torch.abs(y_pred) - torch.abs(y))))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "id": "ab28538f",
    "metadata": {},
+   "outputs": [],
    "source": [
     "x_ = torch.norm(x, dim=1)\n",
     "y_ = torch.norm(y, dim=1)\n",
@@ -470,14 +471,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# plt.plot(s_diff)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5d05de41",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# import torch.nn as nn\n",
     "# class HASANet(nn.Module):\n",
@@ -525,14 +526,14 @@
     "#         hasqi_avg = self.hasqiaverage_score(hasqi_fram)  # (B,1,1)\n",
     "#\n",
     "#         return hasqi_fram, hasqi_avg.squeeze(1)  # (B, 1, T_length) (B,1)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "id": "96bdec74",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# model_q = HASANet()\n",
     "# model_q.load_state_dict(model_qn.state_dict())\n",
@@ -540,39 +541,39 @@
     "score2 = model_qn(y_pred_)\n",
     "print(score1)\n",
     "print(score2)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "id": "d25128d7",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# print(type(score1[1]))\n",
     "print(torch.sigmoid(score1) * 4.0 + 1.0)\n",
     "print(torch.sigmoid(score2) * 4.0 + 1.0)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ddcf92c7",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from lstm import lstm_net\n",
     "from torchinfo import summary\n",
     "model = lstm_net(512)\n",
     "summary(model, col_names=(\"output_size\", \"num_params\", \"kernel_size\"), input_size=(4, 512, 257))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b155696c71fa4723",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
@@ -581,8 +582,67 @@
     "print(torch.norm(a, dim=1))\n",
     "for i in range(a.shape[0]):\n",
     "    print(torch.norm(a[i, :, :], dim=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a6068fc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import CalSigmos, spec2wav\n",
+    "from trainer_utils import load_dataset_se\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "calSigmos = CalSigmos(48000, batch=True)\n",
+    "\n",
+    "train_dataset, valid_dataset, test_dataset = load_dataset_se(\"wav_train_se.list\", [0.8, 0.1, 0.1], 512, 256, 2)\n",
+    "\n",
+    "loader = DataLoader(train_dataset, batch_size=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "40dac8c2f07b87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mos_48k = {\"col\": [], \"disc\": [], \"loud\": [], \"noise\": [], \"reverb\": [], \"sig\": [], \"ovrl\": []}\n",
+    "mos_48k_name = list(mos_48k.keys())\n",
+    "for batch_idx, (x, xp, y, yp) in enumerate(loader):\n",
+    "    # wav = spec2wav(y, xp, y, 512, 256, 512, input_type=2, mask_target=None)\n",
+    "    results = calSigmos(yp.cpu().detach().numpy())\n",
+    "    for i in range(7):\n",
+    "        mos_48k[mos_48k_name[i]].extend(results[i])\n",
+    "    \n",
+    "    if batch_idx > 200:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1b9845e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7039800773162654\n",
+      "3.253926569134882\n"
+     ]
+    }
    ],
-   "outputs": []
+   "source": [
+    "import numpy as np\n",
+    "sig = np.array(mos_48k[\"sig\"])\n",
+    "ovrl = np.array(mos_48k['ovrl'])\n",
+    "print(np.mean(sig))\n",
+    "print(np.mean(ovrl))"
+   ]
   }
  ],
  "metadata": {
